syntax = "proto3";

package users;
option go_package = "github.com/hitesh-babariya/micro-grpc-kafka/proto/user;userspb";

service UsersService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUser (GetUserRequest) returns (UserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string mobile = 3;
}

message GetUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string name = 2;
  string email = 3;
  string mobile = 4;
}
